--- a/jira_utils/pyproject.toml
+++ b/jira_utils/pyproject.toml
@@ -16,10 +16,14 @@ PyYAML = "^6.0"
 dacite = "^1.6.0"
 inquirer = "^2.9.2"
 docopt = "^0.6.2"
+typer = "^0.4.1"
 
 [tool.poetry.dev-dependencies]
 ipdb = "^0.13.9"
 ipython = "^8.3.0"
+
+[tool.poetry.scripts]
+jira = "jira_utils.main:jira"
 
 [build-system]
 # Minimum requirements for the build system to execute.
